Molecule.toStructure() now works with Ethers too